--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chao Liao
-logo: /assets/img/headshot_circle.png
+logo: https://github.com/LZC0034/portfolio/blob/main/Head%20shot.jpeg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
