--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chao Liao
-logo: https://github.com/LZC0034/portfolio/blob/main/Head%20shot.jpeg
+logo: Head_shot.jpeg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
