--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chao Liao
-logo: Head_shot.jpeg
+logo: image/headshot.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
