--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: image/headshot.jpg
 #description: text below image
 #show_downloads: true
 #theme: jekyll-theme-minimal
-theme: cayman-theme-minimal
+theme: Cayman
