--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Chao Liao
 logo: image/headshot.jpg
 #description: text below image
 #show_downloads: true
-#theme: jekyll-theme-minimal
-theme: jekyll-theme-Cayman
+theme: jekyll-theme-minimal
+
